--- a/system_design.tex
+++ b/system_design.tex
@@ -5,33 +5,38 @@
 Write about the methodology and the choices in the system design \dots
 
 
-\vspace{0.5 cm} 
 \section{System architecture}
 \label{sec:sysarc}
-\vspace{0.5 cm} 
+\vspace{0.2 cm} 
 
-Describe the system architecture \dots
+Describe the system architecture shown in figure~\ref{fig:architecture}  \dots
+
+\begin{figure}[h]
+\centering 
+\includegraphics[width=0.9\textwidth]{images/architecture} 
+\caption{Architecture of the proposed system.}
+\label{fig:architecture}
+\end{figure}
+
+Describe the system architecture shown in figure~\ref{fig:architecture}  \dots
 
 
-\vspace{0.5 cm} 
 \section{Data collection}
 \label{sec:collection}
-\vspace{0.5 cm} 
+\vspace{0.2 cm} 
 
 How I collected the data \dots
 
 
-\vspace{0.5 cm} 
 \section{Data transfer}
 \label{sec:transfer}
-\vspace{0.5 cm} 
+\vspace{0.2 cm} 
 
 How I used the MQTT protocol to forward the data \dots
 
 
-\vspace{0.5 cm} 
 \section{Data analysis}
 \label{sec:analysis}
-\vspace{0.5 cm} 
+\vspace{0.2 cm} 
 
 How I analyzed the data \dots
