--- a/system_design.tex
+++ b/system_design.tex
@@ -1,6 +1,6 @@
 \chapter{System Design}
 \label{cha:system}
-\vspace{0.5 cm} 
+\vspace{0.4 cm} 
 
 Write about the methodology and the choices in the system design \dots
 
@@ -25,18 +25,18 @@ Describe the system architecture shown in figure~\ref{fig:architecture}  \dots
 \label{sec:collection}
 \vspace{0.2 cm} 
 
-How I collected the data \dots
+How the data have been collected \dots
 
 
 \section{Data transfer}
 \label{sec:transfer}
 \vspace{0.2 cm} 
 
-How I used the MQTT protocol to forward the data \dots
+How the MQTT protocol has been used to forward the data \dots
 
 
 \section{Data analysis}
 \label{sec:analysis}
 \vspace{0.2 cm} 
 
-How I analyzed the data \dots
+How the data have been analyzed \dots
