--- a/state_of_art.tex
+++ b/state_of_art.tex
@@ -1,6 +1,6 @@
 \chapter{State of the Art}
 \label{cha:soa}
-\vspace{0.5 cm} 
+\vspace{0.4 cm} 
 
 In this section, the current state of the art has been analyzed in the context of counting people in a certain place of interest. Various technologies used for this purpose in the literature are presented. Furthermore, the reasons why sniffing the Wi-Fi probe request frames is the solution with the best trade-offs have been explained. At the end of this chapter, it will be clear the choice to develop this type of system with the U-Hopper team to find a solution to estimate the number of people with high accuracy and low costs, providing real-time integration and ensuring user privacy.
 
@@ -28,16 +28,18 @@ Many researchers have investigated the possibility of estimating the number of p
 
 Bai et al. tried to detect device with different approaches: the number of the sensed Bluetooth Low Energy devices was about $\frac{1}{3}$ of the sensed Wi-Fi devices, these data were sparse, and most of the sensed devices only appeared for a few seconds. The number of unique Bluetooth MAC (Media Access Control) addresses was less than $\frac{1}{10}$ of the unique Wi-Fi MAC addresses, so they gave up the possibility of using Bluetooth Low Energy and Bluetooth data. They concentrated on filtering the Wi-Fi data and obtained a correlation with the ground truth of 0.839 \cite{bai2017lessons}.
 
+Mikkelsen et al. extrapolated from the number of devices the number of people present based on a probability distribution of the number of WLAN (Wireless Local Area Network) enabled devices that a person is carrying and compared this method with a light sensor estimator concluding that the WLAN estimator is better at recovering after errors, while errors in light sensor estimator accumulate over time \cite{mikkelsen2018sensing}.
+
 Di Domenico et al. were the first to propose to use LTE signals of opportunity for applications different from location/tracking, i.e. to estimate crowd density within an environment relying on the analysis of variations of the LTE reference signal received power \cite{di2017lte}. This approach is affected by the changing of positions that lead to a different superimposition of multipath components and, hence, to a different received power. The same number of people at different times can generate totally different values, thus leading to significant errors during the estimation process. They achieved an average accuracy ranging of 82\%, but they tested this system only with a maximum of 5 people. As the number of people increases, the accuracy of the classification decreases, therefore it cannot be used in overcrowded areas.
 
-Shibata and Yamamoto used a sensor node to obtain time-series data of signal strength on a frequency band used for cellular communications. Then they analyzed them using several machine learning techniques to estimate the crowd density around the sensor node installation site \cite{shibata2019people}. This method did not provide the number of people but only the stages of occupancy, with three stages (Low, Normal, and Crowd) the precision is 78\% but with five (Low, Little\_Normal, Normal, Little\_Crowd and Crowd) is only 53\%. 
+Shibata and Yamamoto used a sensor node to obtain time-series data of signal strength on a frequency band used for cellular communications. Then they analyzed them using several machine learning techniques to estimate the crowd density around the sensor node installation site \cite{shibata2019people}. This method did not provide the number of people but only the stages of occupancy, with three stages (Low, Normal and Crowd) the precision is 78\% but with five (Low, Little\_Normal, Normal, Little\_Crowd and Crowd) is only 53\%. 
 
 Another set of solutions developed exploits the attenuation of signals, which could be made by an IR-UWB (Impulse Radio Ultra Wideband) radar, Bluetooth Low Energy devices or RFID (Radio Frequency Identification) readers with antennas.
 
-Choi et al. presented an approach with an IR-UWB radar that needs a preliminary detection of clusters in each environment it will be used to set the parameter values for the algorithm. Then they collected data and thought the use of statistical models they found the number of people that have the maximum likelihood from the minimum of 0 people to the maximum of Np people \cite{choi2017people}. 
+Choi et al. presented an approach using an IR-UWB radar which requires a preliminary detection of the clusters of people in the environment to set the parameter values for the algorithm. After collecting the data, through the use of statistical models they found the number of people that have the maximum likelihood from the minimum of 0 people to the maximum of Np people \cite{choi2017people}. 
 This type of approach needs to know the maximum number of people and works only in a restricted area depending on the antenna. In this case with an angle of \ang{80} and a maximum distance of 5 meters, therefore it cannot be used for many applications.
 
-Brockmann et al. presented a method to count people in a queue using the attenuation of Bluetooth Low Energy signals. Almost 98\% accuracy, but a lot of devices are needed and it's possible to use only in situations where the queue has a predefined path where the sensors are located \cite{brockmann2018cutiqueue}.
+Brockmann et al. presented a method to count people in a queue using the attenuation of Bluetooth Low Energy signals. Almost 98\% accuracy, but a lot of devices are needed and it is possible to use only in situations where the queue has a predefined path where the sensors are located \cite{brockmann2018cutiqueue}.
 
 Gupta et al. proposed an algorithm to estimate the number of people that are crossing the RFID installation in both the directions, achieving 90\% accuracy by real-time experiments for continuous movement up to 75 persons \cite{gupta2018device}. For realize a system like this a lot of RFID readers, antennas and tags are needed. An optimum distance is required between the readers, and with the tags. It works only assuming that people do not reverse directions while walking in the passage. However, as the density of the crowd increases beyond an extent, it tends to completely block the reading of the tag.
 
@@ -53,8 +55,6 @@ Handte et al. presented one of the first approaches to estimate crowd density by
 Kalikova and Krcal tested the feasibility of Wi-Fi detection of mobile devices extracting information from the probe request frames. The paper presents the results of tests of detection of mobile devices with their Wi-Fi on and connected to a particular access point  \cite{kalikova2017people}.
 
 Mikkelsen and Madsen presented a system to anonymize the MAC address of the sniffed probe request frames, to sent them to a server and to analyze them putting two thresholds: minimum value of the RSSI (Received Signal Strength Indicator) and minimum detection time \cite{mikkelsen2016public}. They said that the use of machine learning techniques could have ensured greater accuracy of estimates.
-
-In another experiment, Mikkelsen et al. extrapolated from the number of devices the number of people present based on a probability distribution of the number of WLAN (Wireless Local Area Network) enabled devices that a person is carrying and compared this method with a light sensor estimator concluding that the WLAN estimator is better at recovering after errors, while errors in light sensor estimator accumulate over time \cite{mikkelsen2018sensing}.
 
 With a novel occupation estimation algorithm to reduce the overestimation problem, Mehmood et al. found that using four sniffing devices together resulted in a maximum overestimation of 15\% \cite{mehmood2019occupancy}.
 
@@ -76,6 +76,8 @@ Prasertsung and Horanont used the Wi-Fi probe request frames monitoring techniqu
 
 Shen et al. proposed a shopping group detection system using Wi-Fi. Experimental results indicated that this method could is capable of detecting over 90\% of the groups with an accuracy of 91.2\% \cite{shen2018snow}.
 
+Using real-world data collected in a large social event by a network of passive Wi-Fi sensors Zhou et al. extracted patterns related to crowd behaviors \cite{zhou2020understanding}.
+
 Singh et al. proposed a first-hand application of Wi-Fi sensors and LSTM (Long Short Term Memory) neural network for crowd forecasting and large-scale public event monitoring \cite{singh2020crowd}.
 
 
@@ -86,9 +88,9 @@ Singh et al. proposed a first-hand application of Wi-Fi sensors and LSTM (Long S
 
 The particular case of people estimation on public transport such as busses is a complex application because unlike the estimation in a static place like a shop, there is the movement to consider and the presence of people waiting at the stops, people in the traffic, pedestrians and more. The esteem of people in public transport is a really interesting challenge that is dealt with in literature and that can provide some useful information to public transport managers.
 
-Handte et al.  presented a navigation system for bus passengers that has the ability to seamlessly interconnect bus passengers with the real-world public bus infrastructure. Using the occupancy classes to classify the prediction (low, medium, and high occupancy), they got an exact match accuracy of 61.9\% \cite{handte2016internet}. This work provides an indication of the feasibility of real-time information but accuracy can certainly be improved with the use of machine learning techniques.
+Handte et al. presented a navigation system for bus passengers that has the ability to seamlessly interconnect bus passengers with the real-world public bus infrastructure. Using the occupancy classes to classify the prediction (low, medium, and high occupancy), they got an exact match accuracy of 61.9\% \cite{handte2016internet}. This work provides an indication of the feasibility of real-time information but accuracy can certainly be improved with the use of machine learning techniques.
 
 The study of Reichl et al. examined the use of Wi-Fi-based technologies to count the number and compute the flow of Wi-Fi-enabled devices and hence infer people through the railway infrastructure system in real-time \cite{reichl2018using}. The graph of unique visitors revealed is similar when compared with ticketing data, converting Wi-Fi counts into an estimated number of people assuming that 70\% of people were detectable, without using advanced techniques to do this.
 
-Oransirikul and Takada presented a method to predict the number of passengers at the bus stop by capturing Wi-Fi activity and using the polynomial regression method with six independent variables with a degree of 2. It works well with an average MAE (Mean Absolute Error) of the prediction average of 6, but they did not deal with real-time transmission and analysis of the data \cite{oransirikul2019practicability}.
+Oransirikul and Takada presented a method to predict the number of passengers at the bus stop by capturing Wi-Fi activity and using the polynomial regression method with six independent variables with a degree of 2. It works well with an average MAE (Mean Absolute Error) of the prediction of 6, but they did not deal with transmission and analysis of data in real-time \cite{oransirikul2019practicability}.
 Our approach is similar but used machine learning to determine the best polynomial approximation, i.e. the degree and the coefficients, for two variables: trend and seasonality.
