--- a/Bortolin_Samuel_thesis_20.tex
+++ b/Bortolin_Samuel_thesis_20.tex
@@ -139,8 +139,8 @@
       % \afterpage{\null\thispagestyle{empty}\clearpage}
       
       \input{system_design}
-      % \newpage
-      \afterpage{\null\thispagestyle{empty}\clearpage}
+      \newpage
+      % \afterpage{\null\thispagestyle{empty}\clearpage}
       
       \input{implementation}
       % \newpage
